# invictus-zephyr

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  flake.nix  justfile  rtt_openocd.cfg  todo.org  west.yml
docs/Global/: Architecture.puml  RadioComms.md  RadioPackets.md  RocketStates.md
docs/HYDRA/: sequence.puml
docs/OBC/: command_seq.puml  filling_state_machine.puml  lora_seq.puml
drivers/: CMakeLists.txt  Kconfig
drivers/lora_sx128x/: CMakeLists.txt  Kconfig  Kconfig.sx128x  sx128x.c  sx128x_device.c  sx128x_fake_device.c  sx128x_hal.c
invictus/: CMakeLists.txt  prj.conf
invictus-nav/: CMakeLists.txt  prj.conf
invictus-obc/: .clangd  prj.conf
invictus-obc/boards/: inv2_obc.overlay
invictus-obc/config/: native-sim.conf  rpi_pico.conf
invictus-obc/include/: filling_sm.h  filling_sm_config.h
invictus-obc/src/: filling_sm.c  main.c
invictus-obc/tests/filling/: CMakeLists.txt  prj.conf  test_filling_sm.c  testcase.yaml
invictus/include/: filling_sm.h
invictus/src/: filling_sm.c  filling_sm.h  main.c
invictus/tests/: testplan.yaml
invictus2/ground_station/: CMakeLists.txt  prj.conf
invictus2/hydra/: CMakeLists.txt  Kconfig  prj.conf
invictus2/navigator/: CMakeLists.txt
invictus2/obc/: CMakeLists.txt  Kconfig  prj.conf  (+2 more)
invictus2/obc/tests/lora/unit-testing/: CMakeLists.txt  prj.conf  testcase.yaml
invictus2/obc/tests/lora/unit-testing/src/: lora_fixture.h  main.c
lib/: CMakeLists.txt  Kconfig  Kconfig.modbus_common
scripts/: modbus_server.py  modbus_slave.py  obc_uart_tui.py  uart_cmd_shell.py  uart_tui_shell.py
(+174 files in other folders)
